--- a/.i3/config
+++ b/.i3/config
@@ -135,6 +135,10 @@ bindsym XF86Sleep exec i3lock
 
 bindsym XF86ScreenSaver exec i3lock && dbus-send --system --print-reply --dest="org.freedesktop.UPower" /org/freedesktop/UPower org.freedesktop.UPower.Suspend
 
+bindsym Print exec xfce4-screenshooter -f
+bindsym Mod1+Print exec xfce4-screenshooter -w
+
+
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
