--- a/.tmux.conf
+++ b/.tmux.conf
@@ -30,13 +30,8 @@ set-option -g pane-active-border-bg default
 set-option -g pane-active-border-fg white
 
 # Status Bar
-#set -g status-bg white
-#set -g status-fg black
 set -g status-attr dim
-
-#set -g status-bg colour235
-#set -g status-fg colour254
-
+set -g status-bg "#657B83"
 
 # https://github.com/erikw/tmux-powerline
 # https://github.com/erikw/tmux-powerline/blob/master/themes/default.sh
@@ -45,14 +40,13 @@ set -g status-attr dim
 set -g status-left-length 52
 #set -g status-right-length 451
 #set -g status-fg white
-set -g status-bg colour238
 #set -g window-status-activity-attr bold
 set -g pane-border-fg colour245
 set -g pane-active-border-fg colour39
 set -g message-fg colour16
 set -g message-bg colour221
 set -g message-attr bold
-set -g status-left '#[bg=colour241] #[fg=colour250,bg=colour241,bold]❐  #S #[fg=colour241,bg=colour238,nobold]'
-set -g window-status-format "#[fg=colour238,bg=colour238]#[fg=white,bg=colour238] #I  #W #[fg=colour238,bg=colour238]"
-set -g window-status-current-format "#[fg=colour39,bg=colour238]#[fg=colour25,bg=colour39,noreverse,bold] #I  #W #[fg=colour39,bg=colour238,nobold]"
-set -g status-right '#[fg=white,bold]  %H:%M  %d-%b-%y #[bg=colour238,fg=colour250,bold]#[bg=colour250,fg=black,bold] #{=22:pane_title}#[bg=colour250,fg=colour238,bold] '
+set -g status-left '#[bg=colour241] #[fg=colour250,bg=colour241,bold]❐  #S #[fg=colour241,bg=colour125,nobold] #[fg=colour231,bold]#(~/.tmux_client.sh) #[fg=colour125,bg=#657B83,nobold]'
+set -g window-status-format "#[fg=#657B83,bg=#657B83]#[fg=colour250,bg=#657B83] #I  #W #[fg=#657B83,bg=#657B83]"
+set -g window-status-current-format "#[fg=colour39,bg=#657B83]#[fg=colour231,bg=colour39,noreverse,bold] #I  #W #[fg=colour39,bg=#657B83,nobold]"
+set -g status-right '#[fg=colour231,bold]  %H:%M  %d-%b-%y #[bg=#657B83,fg=colour250,bold]#[bg=colour250,fg=black,bold] #{=22:pane_title}#[bg=colour250,fg=#657B83,bold] '
