Run power manager, automounter on startup

--- a/.i3/config
+++ b/.i3/config
@@ -167,11 +167,13 @@ for_window [class="^Pavucontrol$"] floating enable border normal
 # startup applications
 #
 
-exec /home/drocco/bin/,xcalib
-
+exec --no-startup-id /home/drocco/bin/,xcalib
 exec --no-startup-id nm-applet
 exec --no-startup-id indicator-cpufreq
+exec --no-startup-id autocutsel
 exec --no-startup-id xset r rate 240 40
+exec --no-startup-id thunar --daemon
+exec --no-startup-id xfce4-power-manager
 
 exec --no-startup-id i3-msg 'exec xfce4-terminal --role=main -e "tmux -2"; workspace 2; exec subl; workspace 1'
 #exec --no-startup-id i3-msg 'exec xfce4-terminal --role=main -e "tmux -2"; workspace 2; exec subl; workspace 3; exec chromium-browser; workspace 1'
