--- a/.i3status.conf
+++ b/.i3status.conf
@@ -21,7 +21,7 @@ order += "battery 0"
 order += "load"
 order += "tztime local"
 
-wireless wlan0 {
+wireless _first_ {
     format_up = "W: (%quality at %essid) %ip"
     format_down = "W: down"
 }
@@ -45,7 +45,7 @@ run_watch VPN {
 }
 
 tztime local {
-    format = "%H:%M"
+    format = "%H:%M %d-%b-%Y"
 }
 
 load {
