--- a/.i3/config
+++ b/.i3/config
@@ -4,16 +4,17 @@
 
 set $mod Mod4
 
-font pango:Ubuntu Condensed 10
+font pango:Ubuntu Light 24
 
 # smaller borders & no titles
-new_window 1pixel
+default_border pixel 1
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+#bindsym $mod+Return exec alacritty
+bindsym $mod+Return exec /home/drocco/.local/kitty.app/bin/kitty
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -24,15 +25,16 @@ bindsym $mod+Shift+q kill
 #                logs, db shell, python shell, system shell
 # Win+x: app launcher
 
-bindsym $mod+x exec --no-startup-id i3-dmenu-desktop --dmenu='dmenu -fn "Ubuntu Mono" -i'
-bindsym $mod+a exec i3-msg "[window_role=main] focus"
+bindsym $mod+x exec --no-startup-id i3-dmenu-desktop --dmenu='dmenu -fn "Ubuntu Light-24" -i'
+bindsym $mod+a exec i3-msg "[class=kitty title=main] focus"
 bindsym $mod+s exec i3-msg "[class=Sublime] focus"
-bindsym $mod+d exec i3-msg "[class=jetbrains-pycharm] focus"
-bindsym $mod+f exec i3-msg "[class=Chromium] focus"
-bindsym $mod+j exec i3-msg "[window_role=main] focus" && tmux select-window -t '$0:0'
-bindsym $mod+k exec i3-msg "[window_role=main] focus" && tmux select-window -t '$0:1'
-bindsym $mod+l exec i3-msg "[window_role=main] focus" && tmux select-window -t '$0:2'
-bindsym $mod+semicolon exec i3-msg "[window_role=main] focus" && tmux select-window -t '$0:3'
+bindsym $mod+d exec i3-msg "[class=Cursor] focus"
+bindsym $mod+f exec i3-msg "[class=Chromium-browser title=Chromium] focus"
+bindsym $mod+c exec i3-msg "[class=Chromium-browser title=DevTools] focus"
+bindsym $mod+j exec i3-msg "[class=kitty title=main] focus" && tmux select-window -t '$0:0'
+bindsym $mod+k exec i3-msg "[class=kitty title=main] focus" && tmux select-window -t '$0:1'
+bindsym $mod+l exec i3-msg "[class=kitty title=main] focus" && tmux select-window -t '$0:2'
+bindsym $mod+semicolon exec i3-msg "[class=kitty title=main] focus" && tmux select-window -t '$0:3'
 
 # change focus
 bindsym $mod+Left focus left
@@ -57,7 +59,7 @@ bindsym $mod+v split v
 #bindsym $mod+f fullscreen
 
 # change container layout (stacked, tabbed, toggle split)
-#bindsym $mod+s layout stacking
+bindsym $mod+Shift+s layout stacking
 bindsym $mod+w layout tabbed
 bindsym $mod+e layout toggle split
 
@@ -133,18 +135,35 @@ bindsym $mod+r mode "resize"
 # FIXME: this keybinding never reaches the wm…
 bindsym XF86Sleep exec i3lock
 
-bindsym XF86ScreenSaver exec i3lock -i ~/.i3/lockscreen.png && dbus-send --system --print-reply --dest="org.freedesktop.UPower" /org/freedesktop/UPower org.freedesktop.UPower.Suspend
+bindsym XF86ScreenSaver exec i3lock -i ~/.i3/lockscreen.png && dbus-send --print-reply --system --dest=org.freedesktop.login1 /org/freedesktop/login1 org.freedesktop.login1.Manager.Suspend boolean:true
 
-bindsym Print exec xfce4-screenshooter -f
-bindsym Mod1+Print exec xfce4-screenshooter -w
+bindsym Print exec --no-startup-id /home/drocco/bin/screenshot
+# bindsym Mod1+Print exec xfce4-screenshooter -w -o /usr/bin/gimp
+
+
+# Spotify
+
+bindsym XF86AudioPlay exec dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.PlayPause
+bindsym XF86AudioNext exec dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.Next
+bindsym XF86AudioPrev exec dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.Previous
 
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-    position top
+  position top
     status_command i3status
-    tray_output LVDS1
+    #tray_output eDP-1
+    mode hide
+  colors {
+    separator #dc322f
+    background #eee8d5
+    statusline #859900
+    focused_workspace #fdf6e3 #fdf6e3 #657b83
+    active_workspace #fdf6e3 #fdf6e3 #657b83
+    inactive_workspace #eee8d5 #eee8d5 #657b83
+    urgent_workspace #d33682 #d33682 #fdf6e3
+  }
 }
 
 
@@ -161,19 +180,57 @@ for_window [class="Gitk"] workspace 8
 
 for_window [class="^Spotify.*$"] floating enable
 for_window [class="^Pavucontrol$"] floating enable border normal
+for_window [instance="key-mon"] floating enable
 
 
 #
 # startup applications
 #
 
-exec --no-startup-id /home/drocco/bin/,xcalib
+#exec --no-startup-id /home/drocco/bin/,xcalib
+#exec --no-startup-id compton -b
 exec --no-startup-id nm-applet
 exec --no-startup-id indicator-cpufreq
-exec --no-startup-id autocutsel
-exec --no-startup-id xset r rate 240 40
-exec --no-startup-id thunar --daemon
-exec --no-startup-id xfce4-power-manager
+exec --no-startup-id /home/drocco/bin/,xset
+#exec --no-startup-id thunar --daemon
+exec --no-startup-id devmon
+exec --no-startup-id mate-power-manager
 
-exec --no-startup-id i3-msg 'exec xfce4-terminal --role=main -e "tmux -2"; workspace 2; exec subl; workspace 1'
-#exec --no-startup-id i3-msg 'exec xfce4-terminal --role=main -e "tmux -2"; workspace 2; exec subl; workspace 3; exec chromium-browser; workspace 1'
+exec --no-startup-id i3-msg 'exec /home/drocco/.local/kitty.app/bin/kitty --title=main -e "tmux"; workspace 2; exec subl; workspace 1'
+# exec --no-startup-id i3-msg 'exec /home/drocco/sys/alacritty/target/release/alacritty --title=main -e "tmux"; workspace 2; exec subl; workspace 1'
+#exec --no-startup-id i3-msg 'exec alacritty --title=main -e "tmux -2"; workspace 2; exec subl; workspace 3; exec chromium-browser; workspace 1'
+
+client.focused #fdf6e3 #fdf6e3 #657b83 #6c71c4
+client.focused_inactive #eee8d5 #eee8d5 #657b83 #6c71c4
+client.unfocused #eee8d5 #eee8d5 #657b83 #586e75
+client.urgent #d33682 #d33682 #fdf6e3 #dc322f
+
+
+## Volume control
+
+# Path to volume control, without trailing slash
+set $volumepath ~/sys/i3-volume/volume
+
+# Command for the status line
+#   ie: i3blocks, i3status
+set $statuscmd i3status
+
+# Signal used to update the status line
+#   i3blocks uses SIGRTMIN+10 by default
+#   i3status uses SIGUSR1 by default
+set $statussig SIGUSR1
+
+# Amount to increase/decrease volume as a percentage
+set $volumestep 5
+
+# pulseaudio-utils settings
+#
+# Symbolic name for sink (numeric index not supported)
+#   Recommended: comment out this setting and omit the -s option to use default sink
+#   List sink names: pacmd list-sinks | awk -F "[<>]" '/^\s+name: <.*>/{print $2}'
+#set $sinkname alsa_output.pci-0000_00_1b.0.analog-stereo
+
+# Using pulseaudio-utils (append "-s $sinkname" without quotes to override default sink)
+bindsym XF86AudioRaiseVolume exec $volumepath -np up $volumestep -t $statuscmd -u $statussig
+bindsym XF86AudioLowerVolume exec $volumepath -np down $volumestep -t $statuscmd -u $statussig
+bindsym XF86AudioMute        exec $volumepath -np mute -t $statuscmd -u $statussig
