--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,8 +3,6 @@ set -g prefix C-o
 bind C-o send-prefix
 
 set -g default-terminal "screen-256color"
-set -g utf8 on
-set -g status-utf8 on
 
 set -g clock-mode-colour white
 set -g clock-mode-style 12
@@ -18,20 +16,16 @@ set-window-option -g xterm-keys on
 #
 
 # default window title colors
-set-window-option -g window-status-fg black
-set-window-option -g window-status-bg white
-set-window-option -g window-status-attr dim
+set-window-option -g window-status-style fg=black,bg=white,dim
 
 # active window title colors
-set-window-option -g window-status-current-attr reverse
+set-window-option -g window-status-current-style reverse
 
 # active pane color
-set-option -g pane-active-border-bg default
-set-option -g pane-active-border-fg white
+set-option -g pane-active-border-style bg=default,fg=white
 
 # Status Bar
-set -g status-attr dim
-set -g status-bg "#657B83"
+set -g status-style bg="#657B83"
 
 # https://github.com/erikw/tmux-powerline
 # https://github.com/erikw/tmux-powerline/blob/master/themes/default.sh
@@ -39,14 +33,13 @@ set -g status-bg "#657B83"
 
 set -g status-left-length 52
 #set -g status-right-length 451
-#set -g status-fg white
-#set -g window-status-activity-attr bold
-set -g pane-border-fg colour245
-set -g pane-active-border-fg colour39
-set -g message-fg colour16
-set -g message-bg colour221
-set -g message-attr bold
-set -g status-left '#[bg=colour241] #[fg=colour250,bg=colour241,bold]❐  #S #[fg=colour241,bg=colour125,nobold] #[fg=colour231,bold]#(~/.tmux_client.sh) #[fg=colour125,bg=#657B83,nobold]'
+
+set -g pane-border-style fg=colour245
+set -g pane-active-border-style fg=colour39
+set -g message-style fg=colour16,bg=colour221,bold
+
+# set -g status-left '#[bg=colour241] #[fg=colour250,bg=colour241,bold]❐  #S #[fg=colour241,bg=colour125,nobold] #[fg=colour231,bold]#(~/.tmux_profile.sh) #[fg=colour125,bg=colour241,nobold]#[bg=colour241] #[fg=colour250,bg=colour241,bold]#(~/.tmux_client.sh) #[fg=colour241,bg=#657B83,nobold]'
+set -g status-left '#[bg=colour241] #[fg=colour250,bg=colour241,bold]❐  #S #[fg=colour241,bg=colour125,nobold] #[fg=colour231]#(~/.tmux_profile.sh) #[fg=colour125,bg=colour241,nobold]#[bg=colour241] #[fg=colour250,bg=colour241,bold]#(~/.tmux_client.sh) #[fg=colour241,bg=#657B83,nobold]'
 set -g window-status-format "#[fg=#657B83,bg=#657B83]#[fg=colour250,bg=#657B83] #I  #W #[fg=#657B83,bg=#657B83]"
 set -g window-status-current-format "#[fg=colour39,bg=#657B83]#[fg=colour231,bg=colour39,noreverse,bold] #I  #W #[fg=colour39,bg=#657B83,nobold]"
-set -g status-right '#[fg=colour231,bold]  %H:%M  %d-%b-%y #[bg=#657B83,fg=colour250,bold]#[bg=colour250,fg=black,bold] #{=22:pane_title}#[bg=colour250,fg=#657B83,bold] '
+set -g status-right '#[fg=colour231,bold]  %H:%M  %d-%b-%Y #[bg=#657B83,fg=colour250,bold]#[bg=colour250,fg=black,bold] #{=22:pane_title}#[bg=colour250,fg=#657B83,bold] '
